LibHeifFX/src/main/java/org/libheif/nativ/heif_h.java


    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_context_get_primary_image_ID(struct heif_context *ctx, heif_item_id *id)
     * }
     */
    public static MethodHandle heif_context_get_primary_image_ID$handle() {
        return heif_context_get_primary_image_ID.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_context_get_primary_image_ID(struct heif_context *ctx, heif_item_id *id)
     * }
     */
    public static MemorySegment heif_context_get_primary_image_ID(SegmentAllocator allocator, MemorySegment ctx, MemorySegment id) {
        var mh$ = heif_context_get_primary_image_ID.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_get_primary_image_ID", allocator, ctx, id);
            }
            return (MemorySegment)mh$.invokeExact(allocator, ctx, id);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_get_primary_image_handle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_get_primary_image_handle"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_context_get_primary_image_handle(struct heif_context *ctx, struct heif_image_handle **)
     * }
     */
    public static FunctionDescriptor heif_context_get_primary_image_handle$descriptor() {
        return heif_context_get_primary_image_handle.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_context_get_primary_image_handle(struct heif_context *ctx, struct heif_image_handle **)
     * }
     */
    public static MethodHandle heif_context_get_primary_image_handle$handle() {
        return heif_context_get_primary_image_handle.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_context_get_primary_image_handle(struct heif_context *ctx, struct heif_image_handle **)
     * }
     */
    public static MemorySegment heif_context_get_primary_image_handle(SegmentAllocator allocator, MemorySegment ctx, MemorySegment x1) {
        var mh$ = heif_context_get_primary_image_handle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_get_primary_image_handle", allocator, ctx, x1);
            }
            return (MemorySegment)mh$.invokeExact(allocator, ctx, x1);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_get_primary_image_handle_alloc {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_h.C_POINTER,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_get_primary_image_handle_alloc"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_image_handle *heif_context_get_primary_image_handle_alloc(struct heif_context *ctx)
     * }
     */
    public static FunctionDescriptor heif_context_get_primary_image_handle_alloc$descriptor() {
        return heif_context_get_primary_image_handle_alloc.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_image_handle *heif_context_get_primary_image_handle_alloc(struct heif_context *ctx)
     * }
     */
    public static MethodHandle heif_context_get_primary_image_handle_alloc$handle() {
        return heif_context_get_primary_image_handle_alloc.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_image_handle *heif_context_get_primary_image_handle_alloc(struct heif_context *ctx)
     * }
     */
    public static MemorySegment heif_context_get_primary_image_handle_alloc(MemorySegment ctx) {
        var mh$ = heif_context_get_primary_image_handle_alloc.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_get_primary_image_handle_alloc", ctx);
            }
            return (MemorySegment)mh$.invokeExact(ctx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_get_image_handle {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            heif_error.layout(),
            heif_h.C_POINTER,
            heif_h.C_INT,
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_get_image_handle"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct heif_error heif_context_get_image_handle(struct heif_context *ctx, heif_item_id id, struct heif_image_handle **)
     * }
     */
    public static FunctionDescriptor heif_context_get_image_handle$descriptor() {
        return heif_context_get_image_handle.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct heif_error heif_context_get_image_handle(struct heif_context *ctx, heif_item_id id, struct heif_image_handle **)
     * }
     */
    public static MethodHandle heif_context_get_image_handle$handle() {
        return heif_context_get_image_handle.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * struct heif_error heif_context_get_image_handle(struct heif_context *ctx, heif_item_id id, struct heif_image_handle **)
     * }
     */
    public static MemorySegment heif_context_get_image_handle(SegmentAllocator allocator, MemorySegment ctx, int id, MemorySegment x2) {
        var mh$ = heif_context_get_image_handle.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_get_image_handle", allocator, ctx, id, x2);
            }
            return (MemorySegment)mh$.invokeExact(allocator, ctx, id, x2);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_debug_dump_boxes_to_file {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_debug_dump_boxes_to_file"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_context_debug_dump_boxes_to_file(struct heif_context *ctx, int fd)
     * }
     */
    public static FunctionDescriptor heif_context_debug_dump_boxes_to_file$descriptor() {
        return heif_context_debug_dump_boxes_to_file.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_context_debug_dump_boxes_to_file(struct heif_context *ctx, int fd)
     * }
     */
    public static MethodHandle heif_context_debug_dump_boxes_to_file$handle() {
        return heif_context_debug_dump_boxes_to_file.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_context_debug_dump_boxes_to_file(struct heif_context *ctx, int fd)
     * }
     */
    public static void heif_context_debug_dump_boxes_to_file(MemorySegment ctx, int fd) {
        var mh$ = heif_context_debug_dump_boxes_to_file.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_debug_dump_boxes_to_file", ctx, fd);
            }
            mh$.invokeExact(ctx, fd);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_set_maximum_image_size_limit {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_set_maximum_image_size_limit"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_context_set_maximum_image_size_limit(struct heif_context *ctx, int maximum_width)
     * }
     */
    public static FunctionDescriptor heif_context_set_maximum_image_size_limit$descriptor() {
        return heif_context_set_maximum_image_size_limit.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_context_set_maximum_image_size_limit(struct heif_context *ctx, int maximum_width)
     * }
     */
    public static MethodHandle heif_context_set_maximum_image_size_limit$handle() {
        return heif_context_set_maximum_image_size_limit.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_context_set_maximum_image_size_limit(struct heif_context *ctx, int maximum_width)
     * }
     */
    public static void heif_context_set_maximum_image_size_limit(MemorySegment ctx, int maximum_width) {
        var mh$ = heif_context_set_maximum_image_size_limit.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_set_maximum_image_size_limit", ctx, maximum_width);
            }
            mh$.invokeExact(ctx, maximum_width);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_context_set_max_decoding_threads {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_POINTER,
            heif_h.C_INT
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_context_set_max_decoding_threads"),
                    DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void heif_context_set_max_decoding_threads(struct heif_context *ctx, int max_threads)
     * }
     */
    public static FunctionDescriptor heif_context_set_max_decoding_threads$descriptor() {
        return heif_context_set_max_decoding_threads.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void heif_context_set_max_decoding_threads(struct heif_context *ctx, int max_threads)
     * }
     */
    public static MethodHandle heif_context_set_max_decoding_threads$handle() {
        return heif_context_set_max_decoding_threads.HANDLE;
    }
    /**
     * {@snippet lang=c :
     * void heif_context_set_max_decoding_threads(struct heif_context *ctx, int max_threads)
     * }
     */
    public static void heif_context_set_max_decoding_threads(MemorySegment ctx, int max_threads) {
        var mh$ = heif_context_set_max_decoding_threads.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("heif_context_set_max_decoding_threads", ctx, max_threads);
            }
            mh$.invokeExact(ctx, max_threads);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class heif_image_handle_release {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            heif_h.C_POINTER
        );

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(
                    heif_h.findOrThrow("heif_image_handle_release"),
                    DESC);
    }
